force-app/main/default/objects/Contact/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <displayFormat>ABCD-{0000}-abc</displayFormat>
    <label>License Number</label>
    <type>AutoNumber</type>
</CustomField>