force-app/main/default/objects/Contact/fields/Principal__c.field-meta.xml
<CustomField>
    <fullName>Principal__c</fullName>
    <label>Principal</label>
    <length>250</length>
    <type>Text</type>
</CustomField>