force-app/main/default/objects/Contact/fields/Share_with__c.field-meta.xml
<CustomField>
    <fullName>Share_with__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Share with</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>